--- a/dockerCompose/prod.server.yml
+++ b/dockerCompose/prod.server.yml
@@ -12,6 +12,7 @@ services:
         container_name: rdb
         image: mariadb:10.5
         volumes:
+            - /root/mariaDB_cnf:/etc/mysql/conf.d
             - rdb-data:/var/lib/mysql
         networks:
             - net-abb
