--- a/dockerCompose/mariaDB_cnf/mariadb_custum.cnf
+++ b/dockerCompose/mariaDB_cnf/mariadb_custum.cnf
@@ -3,8 +3,9 @@ port = 3306
 default-character-set=UTF8mb4 
 
 [mysqld] 
-#bind-address = 127.0.0.1 
-bind-address = 0.0.0.0 
+#bind-address=127.0.0.1 
+#bind-address=0.0.0.0 
+bind-address=::
 key_buffer_size = 512M 
 innodb_buffer_pool_size = 512M 
 init_connect = "SET NAMES UTF8mb4" 
@@ -13,4 +14,3 @@ collation-server = utf8mb4_unicode_ci
 
 [mysql] 
 default-character-set = UTF8mb4
-
