--- a/dockerCompose/prod.server.yml
+++ b/dockerCompose/prod.server.yml
@@ -10,9 +10,9 @@ services:
         
     rdb:
         container_name: rdb
-        image: mariadb:10.5
+        image: mysql:8.0
         volumes:
-            - /root/mariaDB_cnf:/etc/mysql/conf.d
+            - /root/mysqlDB_cnf:/etc/mysql/conf.d
             - rdb-data:/var/lib/mysql
         networks:
             - net-abb
@@ -25,8 +25,20 @@ services:
             - MYSQL_DATABASE=${TYPEORM_DATABASE}
             - TZ=Asia/Seoul
             # --init-connect=SET\ NAMES\ UTF8mb4   this is for linux, Mac is   - FOR_EMPTY_STR=${FOR_EMPTY_STR}
-        command: mysqld --init-connect=SET\ NAMES\ UTF8mb4 --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
-    
+        command: --default-authentication-plugin=mysql_native_password
+        # command: mysqld --init-connect=SET\ NAMES\ UTF8mb4 --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+
+    phpmyadmin:
+        container_name: phpmyadmin
+        image: phpmyadmin/phpmyadmin
+        ports:
+            - 33306:80
+        depends_on:
+            - rdb
+        environment:
+            - PMA_ARBITRARY=1
+            - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+
     backend:
         container_name: backend
         # build: 
