--- a/dockerCompose/Dockerfile.web.prod.compose
+++ b/dockerCompose/Dockerfile.web.prod.compose
@@ -43,7 +43,8 @@ RUN yarn build
 FROM nginx:stable-alpine
 COPY --from=build /abb/packages/web/build /usr/share/nginx/html
 COPY ./packages/web/nginx_conf/default.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
+EXPOSE 80 8085
+# 8085 websocket with edge
 CMD ["nginx", "-g", "daemon off;"]
 
 
