--- a/dockerCompose/local.web.yml
+++ b/dockerCompose/local.web.yml
@@ -11,6 +11,8 @@ services:
             - "80:3000"
         networks:
             - net-abb
+        env_file:
+            - ../.env
         environment:
             - CHOKIDAR_USEPOLLING=true  # hot-reloading work
             - REACT_APP_SERVER_PORT=${REACT_APP_SERVER_PORT}        
