--- a/dockerCompose/local.server.yml
+++ b/dockerCompose/local.server.yml
@@ -4,7 +4,7 @@ services:
         container_name: redis
         image: "redis"
         networks:
-            - net-abb
+            - abb-net
         ports:
             - 6379:6379
         
@@ -16,10 +16,10 @@ services:
         volumes:
             # - ~/work/energy/crud/edboard/dockerCompose/mariaDB_cnf:/opt/bitnami/mariadb/conf/
             # - rdb-data:/bitnami/mariadb/data
-            - ~/work/energy/crud/edboard/dockerCompose/mariaDB_cnf:/etc/mysql/conf.d
+            - ~/work/energy/crud/edboard/dockerCompose/mysqlDB_cnf:/etc/mysql/conf.d
             - rdb-data:/var/lib/mysql            
         networks:
-            - net-abb
+            - abb-net
         ports:
             - 3306:3306
         env_file:
@@ -57,6 +57,8 @@ services:
         # restart: always
         ports:
             - 33306:80
+        networks:
+            - abb-net
         depends_on:
             - rdb
         env_file:
@@ -80,7 +82,7 @@ services:
         ports:
             - ${SERVER_PORT}:${SERVER_PORT}
         networks:
-            - net-abb
+            - abb-net
         env_file:
             - ../.env
         environment:
@@ -133,5 +135,7 @@ services:
 
 volumes:
     rdb-data:
+        name: rdb-data
 networks:
-    net-abb:
+    abb-net:
+        name: abb-net
