--- a/dockerCompose/prod.web.yml
+++ b/dockerCompose/prod.web.yml
@@ -7,7 +7,7 @@ services:
         ports:
             - 80:80
         networks:
-            - net-abb
+            - abb-net
         env_file:
             - .env
         environment:
@@ -18,4 +18,5 @@ services:
 # volumes:
 #     rdb-data:
 networks:
-    net-abb:
+    abb-net:
+        name: abb-net
