fix InputMonthField Date type

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,19 @@ service-worker.js
 /coverage
 
 # production
-/build
-/dist
+/build/
+/dist/
+/packages/*/build/
+/packages/*/dist/
+packages/web/build/
+packages/server/dist/
+packages/web/build/**
+packages/server/dist/**
+/build/**
+build/**
+/dist/**
+dist/**
+dist/**/*
 
 # misc
 .DS_Store
